<resources>
    <string name="app_name">Forta</string>
    <string name="メニュー">メニュー</string>
    <string name="時間割">時間割</string>
    <string name="時間割英語">時間割英語</string>
    <string name="時間割登録">時間割登録</string>
    <string name="時間割登録英語">時間割登録英語</string>
    <string name="授業時間英語">授業時間英語</string>
    <string name="ToDoリスト">ToDoリスト</string>
    <string name="ToDoリスト英語">ToDoリスト英語</string>
    <string name="list">List</string>
    <string name="paper">paper</string>
    <string name="check">check</string>
    <string name="clock">clock</string>
    153359492144-0dq8dgdsfsfgjtgqbk0jjehcd80kqbns.apps.googleusercontent.com
    <string name="your_web_client_id">153359492144-2o6vgecrah5aocvdfgtomavulf5elk7s.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="月曜日">月曜日</string>
    <string name="火曜日">火曜日</string>
    <string name="水曜日">水曜日</string>
    <string name="木曜日">木曜日</string>
    <string name="金曜日">金曜日</string>
    <string name="月曜日の時間割登録">月曜日の時間割登録</string>
    <string name="_1限">1限</string>
    <string name="_2限">2限</string>
    <string name="_3限">3限</string>
    <string name="_4限">4限</string>
    <string name="_5限">5限</string>
    <string name="_6限">6限</string>
    <string name="放課後">放課後</string>
    <string name="火曜日の時間割登録">火曜日の時間割登録</string>
    <string name="水曜日の時間割登録">水曜日の時間割登録</string>
    <string name="木曜日の時間割登録">木曜日の時間割登録</string>
    <string name="授業時間">授業時間</string>
    <string name="月曜日の予定">月曜日の予定</string>
    <string name="保存">保存</string>
    <string name="水曜日の予定">水曜日の予定</string>
    <string name="木曜日の予定">木曜日の予定</string>
    <string name="金曜日の予定">金曜日の予定</string>
    <string name="金曜日の時間割登録">金曜日の時間割登録</string>
    <string name="友達の時間割">友達の時間割</string>
    <string name="次へ">次へ</string>




    <string name="com_auth0_client_id">01DzTfyET960wgzf8yeSMhEhq4P3y3Fo</string>
    <string name="com_auth0_domain">dev-bk-u9m6y.us.auth0.com</string>
    <string name="com_auth0_scheme">demo</string>
</resources>